LIST OF CHANGES FROM LAST RELEASE:			<$Revision: 1.893 $>


[Note: This file does not mention every change made to the NetBSD source tree.
For an exhaustive list, please subscribe to the `source-changes' mailing list,
or see the mailing list archives.  For more information, send a message
containing just the word `help' to `majordomo@NetBSD.org'.]


Changes from NetBSD 4.0 to NetBSD 5.0:
	evbppc: add support for Xilinx Virtex II-Pro/4-FX. [freza 20061202]
	mac68k: add support for four more Nubus video cards, including the 
		VillageTronic MacPicasso 340. [hauke 20061206]
	ixp425: add support for NPE Ethernet. [scw 20061210]
	postfix(1): Updated to 2.3.5. [rpaulo 20061220]
	nfs: Remove NQNFS support from kernel. [yamt 20061227]
	mount_psshfs(8): add puffs sshfs [pooka 20061229]
  	zaurus: add support for Sharp C3x00 PDA. [ober 20070105]
	i386: add support for Microsoft Xbox. [jmcneill 20070105]
	ntp: Import ntp 4.2.4 (20061228). Tracking of network interface address
		changes is now supported - no more ntpd restarts when interface
		addresses are re-configured (WLAN/DSL/ppp/...). [kardel 20070106]
	kernel: global 'securelevel' variable removed; it is now internal to
		the secmodel. [elad 20070110]
	GCC: Updated to version 4.1.2-20070110.  [mrg 20070111]
	acpitools: added from FreeBSD via fvdl [christos 20070114]
	scsictl(8): added setspeed command, to set the highest speed that the
		optical drive should use for reading data,
		contributed by Kimura Fuyuki. [bouyer 20070122]
	i386, amd64: add cmos(4), driver for x86 CMOS RAM. [dyoung 20070206]
	newlock2: Merge the newlock2 branch. Introduces a number of new
		kernel synchronization primitives, improves scalability
		on MP systems, and replaces the existing SA threads model
		with a 1:1 threading model. [ad 20070209]
	news68k: Implement generic softintr(9) support. [tsutsui 20070210]
	refuse: added file system in userspace compatibility functionality,
		layered on top of libpuffs [agc 20070211]